# standard-coder-platform

./: .gitignore  README.md  README_PIPELINE.md  pipeline_config.example.toml  pipeline_config.freecodecamp.toml  pipeline_config.toml  pyproject.toml
examples/: prs.example.json
examples/forecasting/: historical_outcomes.example.json  sprint_inputs.example.json
standard_coder/: cli.py
standard_coder/adapters/: git_source.py
standard_coder/adapters/git/: __init__.py  git_ops.py
standard_coder/adapters/github/: __init__.py  github_client.py  github_ingest.py  storage.py
standard_coder/adapters/zenhub/: __init__.py  storage.py  zenhub_client.py  zenhub_ingest.py
standard_coder/api/: app.py
standard_coder/common/: logging_config.py  seeding.py  time_utils.py
standard_coder/forecasting/domain/: models.py
standard_coder/forecasting/priors/: throughput.py
standard_coder/forecasting/scenarios/: scenarios.py
standard_coder/forecasting/services/: forecasting_service.py
standard_coder/forecasting/simulator/: monte_carlo.py
standard_coder/integration/: event_bus.py  events.py
standard_coder/pipeline/: __init__.py  checkpointing.py  config.py  git_io.py  pr_loader.py  progress_ui.py  raw_store.py  runner.py
standard_coder/sch/: interfaces.py
standard_coder/sch/domain/: distributions.py  entities.py  value_objects.py
standard_coder/sch/features/: ast_features.py  (+3 more)
tests/: test_checkpoint_fingerprinting.py  test_dataset_builder_progress.py  test_event_bus.py  test_forecasting.py  test_mdn.py  test_pipeline_config_parallelism.py  test_quantile.py
(+9 files in other folders)
