[project]
name = "standard-coder-platform"
version = "0.1.0"
description = "Reference implementation of the 'Standard Coder' (SCH) pipeline plus event-driven Sprint Forecasting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "torch>=2.0",
    "networkx>=3.0",
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "requests>=2.31",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
standard-coder = "standard_coder.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
